[gd_scene load_steps=6 format=3 uid="uid://4v0upwg4bvax"]

[ext_resource type="Script" path="res://Objects/Teleporter/Teleporter.gd" id="1_enwvx"]
[ext_resource type="SpriteFrames" uid="uid://b1p2rke3iwuub" path="res://Objects/Teleporter/TeleporterFrames.tres" id="2_svwqr"]
[ext_resource type="AudioStream" uid="uid://d7asx7hjajrb" path="res://SFX/Blink.wav" id="3_8h80d"]
[ext_resource type="SpriteFrames" uid="uid://bjl0lqlyec2iq" path="res://Objects/Teleporter/TeleporterEffect.tres" id="4_0lidd"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rd483"]
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("3_8h80d")
stream_0/weight = 1.0

[node name="Teleporter" type="Node2D"]
z_index = -1
texture_filter = 1
script = ExtResource("1_enwvx")

[node name="Tele1" type="Area2D" parent="."]

[node name="Animation1" type="AnimatedSprite2D" parent="Tele1"]
y_sort_enabled = true
sprite_frames = ExtResource("2_svwqr")
animation = &"Off"
autoplay = "On"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tele1"]
build_mode = 1
polygon = PackedVector2Array(0, -4, -8, 0, 0, 4, 8, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Tele1"]
position = Vector2(0, -20)
sprite_frames = ExtResource("4_0lidd")
animation = &"Teleport"
autoplay = "Teleport"

[node name="Tele2" type="Area2D" parent="."]
position = Vector2(22, 0)

[node name="Animation2" type="AnimatedSprite2D" parent="Tele2"]
y_sort_enabled = true
position = Vector2(-0.200001, 0)
sprite_frames = ExtResource("2_svwqr")
animation = &"On"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tele2"]
position = Vector2(-0.200001, 0)
build_mode = 1
polygon = PackedVector2Array(0, -4, -8, 0, 0, 4, 8, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Tele2"]
position = Vector2(0, -20)
sprite_frames = ExtResource("4_0lidd")
animation = &"Teleport"
autoplay = "Teleport"

[node name="Blink" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_rd483")

[connection signal="area_entered" from="Tele1" to="." method="TeleOneEntered"]
[connection signal="area_entered" from="Tele2" to="." method="TeleTwoEntered"]
